# memo-sync

./: .gitignore  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/public/fonts/: README.md
apps/desktop/scripts/: android-e-drive.ps1
apps/desktop/src/: App.test.ts  App.tsx  MarkdownView.tsx  attachments.ts  defaults.ts  search.ts  styles.css  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  store.rs
apps/desktop/src/components/: CommandPalette.tsx  MemoList.tsx  ToastStack.tsx  TypstPreview.tsx
crates/memo-core/: Cargo.toml
crates/memo-core/src/: lib.rs
crates/memo-render/: Cargo.toml
crates/memo-render/assets/fonts/: README.md
crates/memo-render/examples/: render_preview.rs
crates/memo-render/fixtures/: spacing_sample.typ
crates/memo-render/src/: lib.rs
crates/memo-server/: Cargo.toml
crates/memo-server/src/: app_state.rs  compaction.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  projection.rs  routes.rs  validation.rs
crates/memo-server/tests/: sync_api.rs
docs/: architecture.md  icon-prompt.md  linux-musl.md  mobile-tauri.md  realtime-preview-architecture.md  server-deployment.md  typst-rendering.md
scripts/: install-memo-server-linux.sh
