[workspace]
members = [
  "crates/memo-core",
  "crates/memo-server",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Memo Sync Contributors"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
