[package]
name = "memo-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
sha2 = "0.10"
typst = "0.14.2"
typst-as-lib = { version = "0.15.4", features = ["packages", "ureq", "typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-svg = "0.14.2"

[dev-dependencies]
insta = "1.43"
