[package]
name = "memo-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["typst-render"]
typst-render = ["dep:typst", "dep:typst-as-lib", "dep:typst-svg"]

[dependencies]
anyhow.workspace = true
base64 = "0.22"
pulldown-cmark = "0.13.0"
serde.workspace = true
sha2 = "0.10"
typst = { version = "0.14.2", optional = true }
typst-as-lib = { version = "0.15.4", optional = true, features = ["packages", "ureq", "typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-svg = { version = "0.14.2", optional = true }

[dev-dependencies]
insta = "1.43"
