[package]
name = "memo-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
chrono.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
memo-core = { path = "../memo-core" }
mimalloc = { version = "0.1", default-features = false }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
