[package]
name = "memo-desktop"
version = "0.1.0"
description = "A local-first synchronized memo app"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "memo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memo-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
memo-core = { path = "../../../crates/memo-core" }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tauri = { version = "2.8", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-opener = "2.5"
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.14"
