[package]
name = "memo-desktop"
version = "0.1.0"
description = "A local-first synchronized memo app"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "memo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memo-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[features]
default = []
mobile-typst-render = ["memo-render/typst-render"]

[dependencies]
anyhow.workspace = true
base64 = "0.22"
chrono.workspace = true
memo-core = { path = "../../../crates/memo-core" }
memo-render = { path = "../../../crates/memo-render", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tauri = { version = "2.8", features = ["image-png"] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-opener = "2.5"
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
memo-render = { path = "../../../crates/memo-render", features = ["typst-render"] }
tauri = { version = "2.8", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-single-instance = "2.4"

[dev-dependencies]
tempfile = "3.14"
